Modify test code for h2 2.0.202