@@ -133,6 +133,10 @@
           <additionalClasspathElements>
             <additionalClasspathElement>src/test/java/</additionalClasspathElement>
           </additionalClasspathElements>
+          <argLine>
+            --illegal-access=warn
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
